Fix menu visibility on standard viewing sizes

--- a/styles/thymeleaf-screen.less
+++ b/styles/thymeleaf-screen.less
@@ -103,7 +103,7 @@ body {
 	@media (min-width: 43.75em) {
 		bottom: 1em;
 		box-shadow: none;
-		display: block;
+		display: block !important;
 		left: 1em;
 		max-width: 20.625em;
 		top: 1em;
